# DeepSpec

./: .gitignore  LICENSE  NOTICE  README.md  conftest.py  eval.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
config/dflash/: dflash_gemma4_12b.py  dflash_qwen3_14b.py  dflash_qwen3_4b.py  dflash_qwen3_8b.py
config/dspark/: dspark_gemma4_12b.py  dspark_qwen3_14b.py  dspark_qwen3_4b.py  dspark_qwen3_8b.py
config/eagle3/: eagle3_gemma4_12b.py  eagle3_qwen3_14b.py  eagle3_qwen3_4b.py  eagle3_qwen3_8b.py
deepspec/data/: __init__.py  cuda_prefetcher.py  jsonl_dataset.py  parser.py  target_cache_dataset.py
deepspec/eval/: __init__.py  base_evaluator.py
deepspec/modeling/: __init__.py
deepspec/trainer/: __init__.py  base_trainer.py  ckpt_manager.py  dspark_trainer.py  eagle3_trainer.py
deepspec/utils/: __init__.py  config.py  device.py  distributed.py  hfai_suspend.py  io.py  metrics.py  optim.py  sampling.py  target_weights.py  training_logger.py
eval_datasets/: aime24.jsonl  aime25.jsonl  arena-hard-v2.jsonl  convert_eval_datasets_to_jsonl.py  download_arena_hard_dataset.py  gsm8k.jsonl  humaneval.jsonl  lbpp.jsonl  livecodebench.jsonl  math500.jsonl  mbpp.jsonl  mt-bench.jsonl  swe-bench.jsonl
scripts/data/: README.md  download_and_split.py  generate_train_data.py  launch_sglang_server.sh  prepare_data.sh  prepare_target_cache.py
scripts/eval/: eval.sh
scripts/train/: dflash_slurm.sh  dspark_slurm.sh  eagle3_slurm.sh  submit_train.sh  train.sh
tests/: test_config.py  test_jsonl_dataset.py  test_sampling.py
(+25 files in other folders)
